--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Lista de Convidados</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de Convidados</title>
+</head>
   <body>
     <div id="app">
       <h1>Lista de Convidados</h1>
@@ -16,65 +19,7 @@
       <button id="botao">Cadastrar</button>
       <input name = "campoNome" id= "campoCpf" />
     </div>
-    <script type="text/javascript">
-      var convidados = JSON.parse(localStorage.getItem("convidados")) || [];
 
-      var elLista = document.getElementById("lista");
-      var elPessoa = document.getElementById("Pessoa");
-      var elclicar = document.getElementById("clicar");
-      var elCampo = document.getElementById("campo");
-      var elBotao = document.getElementById("botao");
-
-      elclicar.onclick = function() {
-        var nome = elPessoa.value;
-        convidados.push({ nome: nome });
-        elPessoa.value = "";
-        
-        elBotao.onclick = function() {
-       var nome = elCampo.value;
-       convidados.push({ nome: nome });
-       elCampo.value = "";
-
-        listarConvidados();
-      };
-
-      function salvarConvidados() {
-        localStorage.setItem("convidados", JSON.stringify(convidados));
-      }
-
-      function listarConvidados() {
-        elLista.innerHTML = "";
-
-        for (const convidado of convidados) {
-          var elConvidado = document.createElement("li");
-          var elNome = document.createTextNode(convidado.nome);
-
-          var elExcluir = document.createElement("a");
-          elExcluir.setAttribute("href", "#");
-          elExcluir.onclick = function() {
-            convidados = convidados.filter(function(item) {
-              return item.nome !== convidado.nome;
-            });
-
-            salvarConvidados();
-            listarConvidados();
-          };
-
-          var elExcluirTexto = document.createTextNode("Excluir");
-
-          elExcluir.appendChild(elExcluirTexto);
-          elConvidado.appendChild(elNome);
-          elConvidado.appendChild(elExcluir);
-          elLista.appendChild(elConvidado);
-        }
-      }
-
-      listarConvidados();
-
-
-  salvarConvidados();
-  listarConvidados();
-};
-    </script>
+    <script src="src/js/index.js"></script>
   </body>
 </html>
